# atomscreen

./: Cargo.toml  README.md  armv7.dockerfile  build.rs
.github/workflows/: build-recovery.yml  build.yml
driver/: Cargo.toml
driver/src/: lib.rs
driver/src/framebuffer/: evdev_mt_touch_platform.rs  framebuffer_platform.rs  init_framebuffer.rs  mod.rs
example_configs/: centauri-carbon.toml  simulator.toml
moonraker-rs/: Cargo.toml
moonraker-rs/src/: cache.rs  error.rs  lib.rs  moonraker_connection.rs
moonraker-rs/src/connector/: mod.rs  read_deserialize.rs  websocket_read.rs  websocket_write.rs
moonraker-rs/src/printer_objects/: display_status.rs  exclude_object.rs  extruder.rs  fan.rs  filament_switch_sensor.rs  gcode_macro.rs  gcode_move.rs  heater_bed.rs  idle_timeout.rs  mod.rs  motion_report.rs  output_pin.rs  print_stats.rs  temp_config.rs  temp_control.rs  temperature_fan.rs  temperature_sensor.rs  toolhead.rs  virtual_sdcard.rs  webhooks.rs
moonraker-rs/src/requests/: file_management.rs  mod.rs  printer_administration.rs  switches_sensors_devices.rs
recovery/: Cargo.toml  build.rs
recovery/example_configs/: simulator.toml
recovery/src/: main.rs  task_exec.rs
recovery/src/config/: config.rs  display.rs  display_default.rs  display_fb.rs  mod.rs  script.rs
recovery/ui/: main.slint
src/: application_error.rs  main.rs
src/config/: cli.rs  config.rs  display.rs  display_default.rs  display_fb.rs  gcode_commands.rs  mod.rs  moonraker.rs  ui.rs
src/event_loop/: display_status.rs  event_loop.rs  klipper_state.rs  mod.rs  print_stats.rs  temperature_devices.rs
src/hardware/: evdev_mt_touch_platform.rs  framebuffer_platform.rs  init_display.rs  mod.rs
src/ui_functions/: filesystem_download_thumbnail.rs  filesystem_fetch_metadata.rs  filesystem_list_files.rs  filesystem_load_high_res_thumbnail.rs  misc_fetch_power_devices.rs  misc_set_power_device.rs  mod.rs  printer_emergency_stop.rs  printer_execute_gcode_command.rs  printer_firmware_restart.rs  printer_restart.rs  printjob_resume_stop_pause.rs  quick_action_execute.rs  settings_set_ui_settings.rs  temperature_set_new_target_temperature.rs  util_create_temperature_list.rs  util_format_bytes.rs  util_image_exists.rs  util_prettify_name.rs  util_time_in_seconds_to_string.rs
ui/: constants.slint  icons.slint  main.slint  state.slint  types.slint  virtual_keyboard.slint
ui/components/: badge.slint  bottom-bar.slint  dropdown-select.slint  ghost-button.slint  horizontal.slint  icon-button.slint  number-pad.slint  page.slint  small-button.slint  top-bar.slint  vertical.slint  yes-no-prompt.slint
ui/pages/: file-list-page.slint  print-status-page.slint  quick-actions-page.slint  temperature-page.slint
