[package]
name = "slint-rust-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = {version = "1.12.1", features = ["renderer-software"]}
toml = "0"
evdev = "0"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
serde = "1.0"
linuxfb = "0"

[build-dependencies]
slint-build = "1.12.1"

[workspace.metadata.cross.target.armv7-unknown-linux-musleabihf]
image = "cross-armv7:latest"