[package]
name = "atomscreen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = {version = "1", features = ["renderer-software"]}
toml = "0"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
serde = "1.0"
tokio = { version = "1", features = ["full"]}
moonraker-rs = { path = "./moonraker-rs"}
image = { version = "0", default-features = false, features = ["png"] }
optional_struct = "0"

[target.'cfg(unix)'.dependencies]
evdev = "0"
linuxfb = "0"
memmap = "0"

[build-dependencies]
slint-build = "1.12.1"

[workspace]
members = ["moonraker-rs"]

[workspace.metadata.cross.target.armv7-unknown-linux-musleabihf]
image = "cross-armv7:latest"

[profile.release]
strip = true
lto = true