[package]
name = "atomscreen"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = {git = "https://github.com/slint-ui/slint", default-features = false, features = ["renderer-software", "compat-1-2", "std"]}
toml = "0"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
serde = "1.0"
tokio = { version = "1", features = ["full"]}
moonraker-rs = { path = "./moonraker-rs" }
image = { version = "0", default-features = false, features = ["png"] }
optional_struct = "0"

[features]
pc = ["slint/accessibility", "slint/backend-default", "slint/renderer-femtovg"]

[target.'cfg(unix)'.dependencies]
driver = { path = "./driver" }

[build-dependencies]
slint-build = { git = "https://github.com/slint-ui/slint", package = "slint-build" }

[workspace]
members = ["driver","moonraker-rs"]

[workspace.metadata.cross.target.armv7-unknown-linux-musleabihf]
image = "cross-armv7:latest"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
