[package]
name = "recovery"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = {version = "1", default-features = false, features = ["renderer-software", "compat-1-2", "std"]}
toml = "0"
serde = { version = "1.0", features = ["derive"] }
indexmap = { version = "2", features = ["serde"] }

[features]
pc = ["slint/accessibility", "slint/backend-default", "slint/renderer-femtovg"]

[target.'cfg(unix)'.dependencies]
driver = { path = "../driver" }

[workspace.metadata.cross.target.armv7-unknown-linux-musleabihf]
image = "cross-armv7:latest"

[build-dependencies]
slint-build = "1.12.1"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1