[package]
name = "recovery"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = {git = "https://github.com/slint-ui/slint", default-features = false, features = ["renderer-software", "compat-1-2", "std"]}
toml = "0"
serde = { version = "1.0", features = ["derive"] }

[features]
pc = ["slint/accessibility", "slint/backend-default", "slint/renderer-femtovg"]

[target.'cfg(unix)'.dependencies]
driver = { path = "../driver" }

[workspace.metadata.cross.target.armv7-unknown-linux-musleabihf]
image = "cross-armv7:latest"

[build-dependencies]
slint-build = { git = "https://github.com/slint-ui/slint", package = "slint-build" }

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1